--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "react-native-maps": "1.3.2",
     "react-native-paper": "^5.8.0",
     "react-native-reanimated": "~2.14.4",
+    "react-native-router-flux": "^4.3.1",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~3.20.0",
+    "react-native-switch-selector": "^2.3.0",
     "react-native-url-polyfill": "^1.3.0",
     "react-redux": "^8.0.7",
     "redux": "^4.2.1",
