--- a/package.json
+++ b/package.json
@@ -19,15 +19,18 @@
     "@react-navigation/stack": "^6.3.16",
     "@supabase/supabase-js": "^2.22.0",
     "expo": "~48.0.15",
+    "expo-camera": "~13.2.1",
     "expo-constants": "~14.2.1",
     "expo-image-picker": "~14.1.1",
     "expo-linking": "~4.0.1",
+    "expo-media-library": "~15.2.3",
     "expo-router": "^1.5.3",
     "expo-status-bar": "~1.4.4",
-    "expo-updates": "~0.16.4",
+    "expo-updates": "^0.16.4",
     "react": "18.2.0",
     "react-native": "0.71.8",
     "react-native-dropdown-picker": "^5.4.6",
+    "react-native-image-crop-picker": "^0.40.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.3.2",
     "react-native-paper": "^5.8.0",
