--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "~3.20.0",
     "react-native-switch-selector": "^2.3.0",
+    "react-native-toast-notifications": "^3.3.1",
     "react-native-url-polyfill": "^1.3.0",
     "react-redux": "^8.0.7",
     "redux": "^4.2.1",
